k8s/lb.yml
apiVersion: v1
kind: Service
metadata:
  name: ecosia-svc-lb
spec:
  type: LoadBalancer
  ports:
    - targetPort: 8080
      port: 8080
  selector:
    app: sre-asst
