k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecosia-svc
spec:
  type: NodePort
  ports:
    - targetPort: 8080
      port: 8080
      nodePort: 30100
  selector:
    app: sre-asst
